--- a/Intermediate Front End Development Projects/tStyle.css
+++ b/Intermediate Front End Development Projects/tStyle.css
@@ -9,36 +9,50 @@ body{
   background-color: #add8e6;
 }
 
+.link-spanner{
+  position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left: 0;
+    z-index: 1;
+  }
+
+.info{
+ position: relative;
+}
+
+
+.container{
+  width: 50%;
+}
+
+.nopadding{
+  padding: 0;
+}
+
 .imageCSS {
     border-color: black;
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
     width: 20%;
-    background-color: red;
-  }
+}
 
 .logo{
   height: 100px;
   padding: 10px;
-  background-color: blue;
-
-
-
 }
 .link{
   height: 100px;
   padding: 10px;
-  background-color: blue;
-
-
 }
 
 .info{
   height: 100px;
   padding: 10px;
-  background-color: blue;
-
-
-
 }
+
+.online{
+  background-color: blue;
+  }
