removed the link div, clicking the area of the info div now directly links you to the stream

--- a/Intermediate Front End Development Projects/tStyle.css
+++ b/Intermediate Front End Development Projects/tStyle.css
@@ -8,7 +8,7 @@
 body{
   background-color: #add8e6;
 }
-
+/* makes the span the entire area of the div (you can click on the div to go to the linked site) */
 .link-spanner{
   position:absolute;
     width:100%;
