--- a/Intermediate Front End Development Projects/tStyle.css
+++ b/Intermediate Front End Development Projects/tStyle.css
@@ -15,15 +15,10 @@ h1{
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
-/* makes the span the entire area of the div (you can click on the div to go to the linked site) */
-.link-spanner{
-  position:absolute;
-    width:100%;
-    height:100%;
-    top:0;
-    left: 0;
-    z-index: 1;
-}
+a:link, a:hover, a:visited, a:active{
+  color: inherit;
+  text-decoration:none;
+  }
 
 .container{
   width: 50%;
