--- a/AdvancedFrontEndDevelipmentProjects/css/calculator.css
+++ b/AdvancedFrontEndDevelipmentProjects/css/calculator.css
@@ -1,23 +1,63 @@
 
+body{
+background-color: grey;
+}
+
 .container{
   min-width: 300px;
   max-width: 300px;
 
+  margin-top:20px;
+  background-color: #E0E0E0;
+  padding-bottom:10px;
+
   border: 1px;
   border-style: solid;
   border-color: black;
+
+  border-radius:10px;
+  box-shadow:2px 2px;
 }
 
-.row{
+.calculator{
+
+}
+
+
+.panel{
+  margin-top: 20px;
+}
+
+.top-panel{
+  font-size: 30px;
+  margin-top: -10px;
+  margin-bottom: -5px;
+
+}
+
+.bottom-panel{
+  padding:0;
+  margin-top: -5px;
+  margin-bottom: -10px;
+
+  font-size: 10px;
 
 }
 
 .btn{
-  
-  width: auto;
-  heigth: auto;
-  margin-top: 3px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+
+  margin-top: 10px;
+  padding:0;
+
+  box-shadow:1px 1px grey;
+
 }
 .long{
-  height: 95px;
+  height: 62px;
+}
+.wide{
+  width: 120px;
 }
