--- a/AdvancedFrontEndDevelipmentProjects/css/tictac.css
+++ b/AdvancedFrontEndDevelipmentProjects/css/tictac.css
@@ -1,19 +1,38 @@
 
 
-.game{
-    border: 1px;
-    border-style: solid;
+.container{
+    margin-top: 100px;
+    width: 500px;
+    padding:0;
+  }
+
+
+
+.responsive-square{
+    float:left;
+    position: relative;
+    width: 30%;
+    padding-bottom: 30%;
+    margin:1px;
+    overflow:hidden;
+    background-color: black;
 }
 
+.content {
+    position:absolute;
+    height:80%; /* = 100% - 2*10% padding */
+    width:90%; /* = 100% - 2*5% padding */
+    padding: 10% 5%;
+}
 
-
-.col-xs-4{
-height:0;
-width:25%;
-padding-bottom:25%;
-background-color:lightblue;
-
-border: 1px;
-border-style: solid;
-
+.table{
+    display:table;
+    height:100%;
+    width:100%;
+}
+.table-cell{
+    display:table-cell;
+    vertical-align:middle;
+    height:100%;
+    width:100%;
 }
