--- a/AdvancedFrontEndDevelipmentProjects/css/tictac.css
+++ b/AdvancedFrontEndDevelipmentProjects/css/tictac.css
@@ -1,9 +1,10 @@
 
 
 .container{
-    margin-top: 100px;
+    margin-top: 50px;
     width: 500px;
     padding:0;
+    font-size: 80px;
   }
 
 
@@ -20,9 +21,8 @@
 
 .content {
     position:absolute;
-    height:80%; /* = 100% - 2*10% padding */
-    width:90%; /* = 100% - 2*5% padding */
-    padding: 10% 5%;
+    height:100%; /* = 100% - 2*10% padding */
+    width:80%; /* = 100% - 2*5% padding */
 }
 
 .table{
@@ -35,4 +35,21 @@
     vertical-align:middle;
     height:100%;
     width:100%;
+}
+
+.modal{
+  display:  block;
+  font-size: 20px;
+}
+
+
+.big-bold{
+  font-weight: bold;
+  font-size: 150%;
+}
+
+
+.hoverhand{
+  cursor: pointer;
+  cursor: hand;
 }
