--- a/AdvancedFrontEndDevelipmentProjects/css/simon.css
+++ b/AdvancedFrontEndDevelipmentProjects/css/simon.css
@@ -76,6 +76,8 @@
 }
 .panel-text{
   font-size: 20px;
+  color:red;
+  opacity: 0.3;
 }
 .start{
 background-color:red;
@@ -92,5 +94,5 @@ border-radius: 5px;
 color: black;
 }
 .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
-    outline: 0;
+    outline: none;
 }
